<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:text="@string/channel"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="5"
            android:gravity="center"
            android:hint="@string/text"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/channel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/channel_text" />

        <Button
            android:id="@+id/set_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:text="@string/set" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/open_button"
            android:layout_width="70dip"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/open"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <NumberPicker
            android:id="@+id/channelpicker"
            android:layout_width="40dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/channeldotpicker"
            android:layout_width="40dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>